--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Move mouse to gather the falling circles.
+		    Move mouse SLOWLY to gather the falling circles.
 	    </footer>
-	    <p>
+	    <footer>
 	    	Click mouse to start again!
-	    </p>
+	    </footer>
 	</body>
 </html>
